@@ -22,3 +22,4 @@
   - fixed gallery trail: trail goes down as long as gallery_trail variable is set
   - moved all gallery templates to common template directory
   - added INCLUDE_VARS system variable
+  - added FileWiki::Plugin::CSS, with template and minimizing support
